# adaptive-cubesat-adcs

./: README.md
cubesat-simulation/: adaptive_controller.csv  data-analysis.ipynb  dc_motor_test.cpp  my_sdf.sdf  random.cpp  sliding_contoller.csv  test.sdf
cubesat-simulation/bags/: bag_parser.py  messages.csv  topics.csv
cubesat-simulation/bags/rosbag2_2022_02_04-12_31_28/: metadata.yaml  rosbag2_2022_02_04-12_31_28.db3
cubesat-simulation/controller/: CMakeLists.txt  package.xml
cubesat-simulation/include/: pluginTransducer.h  remoteSmartdata.h  responsiveSmartdata.h  simpleSensor.cpp  smartdata.h  transducer.h  transformerSmartdata.h  units.h
cubesat-simulation/install/: local_setup.sh  setup.sh
cubesat-simulation/log/: latest_build
cubesat-simulation/src/concept/: CMakeLists.txt
cubesat-simulation/src/concept/include/: controller.h  controller_smartdata.h  local_smartdata.h  node_name_server.h  observed.h  plugin_amperimeter.h  plugin_motor_driver.h  proportional_controller.h  smartdata.h  topic_server.h  transducer.h  units.h
cubesat-simulation/src/concept/src/: concept.cpp
cubesat-simulation/src/controller/: CMakeLists.txt  adaptive_controller_system.h  adaptive_square_root_cubature_kalman_filter.h  digital_filter.h  hybrid_controller.h  iterator.h  observed.h  signal_monitor.h  sliding_controller_system.h  sliding_mode_controller.h
cubesat-simulation/src/controller/include/: adaptive_controller_system.h  adaptive_square_root_cubature_kalman_filter.h  controller.h  controller_smartdata.h  units.h  (+21 more)
cubesat-simulation/src/controllers/: adaptive_controller_system.h  adaptive_square_root_cubature_kalman_filter.h  chebyshev_polynomials.h  circular_buffer.h  digital_filter.h  disturbance_predictor.h  feedback_linearization_controller.h  hybrid_controller.h  nonadaptive_control_system.h  satellite_model.h  signal_monitor.h  sliding_mode_controller.h
cubesat-simulation/src/cubesat_actuators/: CMakeLists.txt
cubesat-simulation/src/cubesat_controller/: CMakeLists.txt
cubesat-simulation/src/cubesat_controllers/: CMakeLists.txt  package.xml
cubesat-simulation/src/cubesat_description/: setup.cfg  setup.py
cubesat-simulation/src/cubesat_gazebo/: CMakeLists.txt
cubesat-simulation/src/cubesat_gazebo/plugins/dc_motor_plugin/: CMakeLists.txt
cubesat-simulation/src/cubesat_gazebo/plugins/dc_motor_plugin/src/: dc_motor_model.cc  dc_motor_plugin.cc
cubesat-simulation/src/cubesat_sensors/: CMakeLists.txt  package.xml
cubesat-simulation/src/install/: local_setup.sh  setup.sh
cubesat-simulation/src/log/: latest_build
cubesat-simulation/src/smartdata_test/: CMakeLists.txt
cubesat-simulation/src/smartdata_test/src/: actuator_smartdata_test.cpp  remote_smartdata_test.cpp  smartdata_test.cpp
motor-control/inverter/inverter/: inverter-pcb-lib.PcbLib  inverter-pcb.PcbDoc  inverter-schem-lib.SchLib  inverter-schem.SchDoc  inverter.PrjPcb
(+131 files in other folders)
